<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_sync_status"
        android:title="@string/action_sync_status" />
    <item
        android:id="@+id/action_image_processor_assemblies"
        android:title="@string/action_image_processor_assemblies" />
    <item
        android:id="@+id/action_reload_image_processor_config"
        android:title="@string/action_reload_image_processor_config" />
    <item
        android:id="@+id/action_test_flir"
        android:title="@string/flir_test_title" />
    <item
        android:id="@+id/action_company_info"
        android:title="@string/action_company_info" />
    <item
        android:id="@+id/action_terms_and_conditions"
        android:title="@string/action_terms_and_conditions" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_switch_company"
        android:title="@string/action_switch_company" />
    <item
        android:id="@+id/action_sign_out"
        android:title="@string/action_sign_out" />
</menu>
